fix: Fix layout issue where canvas would become compressed

--- a/src/Viewer.module.css
+++ b/src/Viewer.module.css
@@ -22,6 +22,7 @@
 .canvasTopAndCanvasContainer {
   border: 1px solid var(--color-borders);
   border-radius: 5px 5px 0 0;
+  flex-basis: 732px;
 }
 
 .canvasControlsContainer {
